--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
         background-color: teal;
         padding-top: 30px;
     }
+    h3{
+        text-align: center;
+        font-size: larger;
+    }
     .container {
       width: 100%;
       height: 130px;
